# os_overview_project

./: .gitignore  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt
client/src/: ClientManager.cpp  ClientManager.h  NetworkDiscovery.cpp  NetworkDiscovery.h  mainwindow.cpp  mainwindow.h
os_overview/: CMakeLists.txt  os-overview.service
os_overview/debian/: control  postinst  preinst
os_overview/src/: FileManager.cpp  FileManager.h  NetworkDiscovery.cpp  NetworkDiscovery.h  Server.cpp  Server.h  ServiceManager.cpp  ServiceManager.h  SystemInfo.cpp  SystemInfo.h  UserManager.cpp  UserManager.h  main.cpp  processmanager.cpp  processmanager.h
